--- a/api-src/allclasses-frame.html
+++ b/api-src/allclasses-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-All Classes (Griffon IcoMoon Icons Plugin 1.0.0-SNAPSHOT)
+All Classes (Griffon IcoMoon Icons Plugin 1.0.0)
 </TITLE>
 
 
