--- a/api-src/griffon/builder/swing/package-frame.html
+++ b/api-src/griffon/builder/swing/package-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-griffon.builder.swing (Griffon IcoMoon Icons Plugin 1.0.0)
+griffon.builder.swing (griffon-icomoonicons 1.1.0)
 </TITLE>
 
 <META NAME="keywords" CONTENT="griffon.builder.swing">
