--- a/api-src/griffon/plugins/icomoonicons/package-frame.html
+++ b/api-src/griffon/plugins/icomoonicons/package-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-griffon.plugins.icomoonicons (Griffon IcoMoon Icons Plugin 1.0.0)
+griffon.plugins.icomoonicons (griffon-icomoonicons 1.1.0)
 </TITLE>
 
 <META NAME="keywords" CONTENT="griffon.plugins.icomoonicons">
