--- a/api-src/griffon/swing/support/icomoonicons/package-frame.html
+++ b/api-src/griffon/swing/support/icomoonicons/package-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-griffon.swing.support.icomoonicons (Griffon IcoMoon Icons Plugin 1.0.0)
+griffon.swing.support.icomoonicons (griffon-icomoonicons 1.1.0)
 </TITLE>
 
 <META NAME="keywords" CONTENT="griffon.swing.support.icomoonicons">
