--- a/api-src/index.html
+++ b/api-src/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-Griffon IcoMoon Icons Plugin 1.0.0
+griffon-icomoonicons 1.1.0
 </TITLE>
 
 <link href="doc.ico" type="image/x-icon" rel="shortcut icon">
