--- a/api-src/overview-frame.html
+++ b/api-src/overview-frame.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>
-Overview (Griffon IcoMoon Icons Plugin 1.0.0)
+Overview (griffon-icomoonicons 1.1.0)
 </title>
 
 <link rel="stylesheet" type="text/css" href="stylesheet.css" title="Style">
@@ -13,7 +13,7 @@ Overview (Griffon IcoMoon Icons Plugin 1.0.0)
 
 <table border="0" width="100%">
 <tr>
-<th align="left" nowrap>Griffon IcoMoon Icons Plugin 1.0.0</th>
+<th align="left" nowrap>griffon-icomoonicons 1.1.0</th>
 </tr>
 </table>
 
