--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 <div class="paragraph">
 <p>Provides a shortcut for adding icons based on <a href="https://icomoon.io/#icons-icomoon" target="_blank">IcoMoon Icon Pack</a>.</p>
 </div>
+<div class="paragraph">
+<p>Griffon version: 2.2.0</p>
+</div>
 </div>
 </div>
 <div class="sect1">
